# src/main/java/com/camelcase/taskapi/model/Task.java
@@ -22,7 +22,7 @@ import jakarta.annotation.Generated;
  * Task
  */
 
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-03-10T18:22:10.574140745Z[Etc/UTC]", comments = "Generator version: 7.13.0-SNAPSHOT")
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-03-12T12:51:37.560464508Z[Etc/UTC]", comments = "Generator version: 7.13.0-SNAPSHOT")
 public class Task {
 
   private @Nullable String id;
@@ -32,9 +32,9 @@ public class Task {
   private @Nullable String description;
 
   /**
-   * Gets or Sets status
+   * Gets or Sets taskStatus
    */
-  public enum StatusEnum {
+  public enum TaskStatusEnum {
     PENDING("pending"),
     
     IN_PROGRESS("in_progress"),
@@ -43,7 +43,7 @@ public class Task {
 
     private String value;
 
-    StatusEnum(String value) {
+    TaskStatusEnum(String value) {
       this.value = value;
     }
 
@@ -58,8 +58,8 @@ public class Task {
     }
 
     @JsonCreator
-    public static StatusEnum fromValue(String value) {
-      for (StatusEnum b : StatusEnum.values()) {
+    public static TaskStatusEnum fromValue(String value) {
+      for (TaskStatusEnum b : TaskStatusEnum.values()) {
         if (b.value.equals(value)) {
           return b;
         }
@@ -68,7 +68,7 @@ public class Task {
     }
   }
 
-  private @Nullable StatusEnum status;
+  private @Nullable TaskStatusEnum taskStatus;
 
   @DateTimeFormat(iso = DateTimeFormat.ISO.DATE)
   private @Nullable LocalDate dueDate;
@@ -133,24 +133,24 @@ public class Task {
     this.description = description;
   }
 
-  public Task status(StatusEnum status) {
-    this.status = status;
+  public Task taskStatus(TaskStatusEnum taskStatus) {
+    this.taskStatus = taskStatus;
     return this;
   }
 
   /**
-   * Get status
-   * @return status
+   * Get taskStatus
+   * @return taskStatus
    */
   
-  @Schema(name = "status", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
-  @JsonProperty("status")
-  public StatusEnum getStatus() {
-    return status;
+  @Schema(name = "taskStatus", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @JsonProperty("taskStatus")
+  public TaskStatusEnum getTaskStatus() {
+    return taskStatus;
   }
 
-  public void setStatus(StatusEnum status) {
-    this.status = status;
+  public void setTaskStatus(TaskStatusEnum taskStatus) {
+    this.taskStatus = taskStatus;
   }
 
   public Task dueDate(LocalDate dueDate) {
@@ -185,13 +185,13 @@ public class Task {
     return Objects.equals(this.id, task.id) &&
         Objects.equals(this.title, task.title) &&
         Objects.equals(this.description, task.description) &&
-        Objects.equals(this.status, task.status) &&
+        Objects.equals(this.taskStatus, task.taskStatus) &&
         Objects.equals(this.dueDate, task.dueDate);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(id, title, description, status, dueDate);
+    return Objects.hash(id, title, description, taskStatus, dueDate);
   }
 
   @Override
@@ -201,7 +201,7 @@ public class Task {
     sb.append("    id: ").append(toIndentedString(id)).append("\n");
     sb.append("    title: ").append(toIndentedString(title)).append("\n");
     sb.append("    description: ").append(toIndentedString(description)).append("\n");
-    sb.append("    status: ").append(toIndentedString(status)).append("\n");
+    sb.append("    taskStatus: ").append(toIndentedString(taskStatus)).append("\n");
     sb.append("    dueDate: ").append(toIndentedString(dueDate)).append("\n");
     sb.append("}");
     return sb.toString();
