# src/main/java/com/camelcase/taskapi/model/entity/TaskEntity.java
@@ -1,0 +1,25 @@
+package com.camelcase.taskapi.model.entity;
+
+import java.time.LocalDate;
+
+import jakarta.persistence.*;
+import lombok.*;
+
+@Entity
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+@Table(name = "tasks")
+public class TaskEntity {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+
+    private String title;
+    private String description;
+
+    @Enumerated(EnumType.STRING)
+    private TaskStatusEnum taskStatus;
+
+    private LocalDate dueDate;
+}
